--- a/Atividades_HTML/Formulario.html
+++ b/Atividades_HTML/Formulario.html
@@ -15,32 +15,31 @@
     <a><h2>Dados pessoais</h2></a>
     <br />
     <br />
-    <label for="Nome">Nome</label>
-    <input type="text" id="nome" />
-    <label for="Sobrenome">Sobrenome </label>
-    <input type="text" id="Sobrenome" />
-    <label for="data" >Data de nascimento</label>
-    <input type="tel" id="data" placeholder="dd/mm/aaaa" />
-    <br />
-    <br />
-    <label for="Telefone" >Telefone</label>
-    <input type="tel" id="Telefone" placeholder="Ex: (00)00000000" />
-    <br />
-    <br />
-    <labe for="E-mail" >E-mail</labe>
-    <input type="text" id="E-mail" />
-    <br />
-    <br />
-    <label for="senha" >senha</label>
-    <input type="password" id="senha" />
-    <br />
-    <br />
-    <button type="submit">
-        Salvar
-    </button>
-    <button type="reset">
-        Reset
-    </button>
+    <form>
+        <label for="Nome">Nome</label>
+        <input type="text" id="nome" />
+        <label for="Sobrenome">Sobrenome </label>
+        <input type="text" id="Sobrenome" />
+        <label for="data" >Data de nascimento</label>
+        <input type="tel" id="data" placeholder="dd/mm/aaaa" />
+        <br />
+        <br />
+        <label for="Telefone" >Telefone</label>
+        <input type="tel" id="Telefone" placeholder="Ex: (00)00000000" />
+        <br />
+        <br />
+        <labe for="E-mail" >E-mail</labe>
+        <input type="email" id="E-mail" />
+        <br />
+        <br />
+        <label for="senha" >Senha</label>
+        <input type="password" id="senha" />
+        <br />
+        <br />
+        <button type="submit">
+            Cadastrar
+        </button>
+    </form>
 </body>
 </html>
 
