comitando o proseguimento de aulas CSS

--- a/HTML2/newcss.html
+++ b/HTML2/newcss.html
@@ -5,6 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>NewCss.HTML</title>
+    <link rel="stylesheet" href="./SEGtes.css" />
 </head>
 <body>
     <header>
@@ -24,7 +25,7 @@
     </header>
     <header>
         <section>
-            <h2> Aang ta PUTO!</h2>
+            <h2 id="Aang"> Aang ta PUTO!</h2>
             <article>
                 <img src="https://i.pinimg.com/564x/79/14/ab/7914ab8a02118e1e0c7e1345d9030f08--avatar-aang-change-.jpg" 
                 alt="avatar aang puto"/> <br />
@@ -32,7 +33,7 @@
                 <div>
                     <ul>
                         <li>
-                            <h3>Nomade do AR, cultura pacifica</h3>
+                            <h3 id="ar" >Nomade do AR, cultura pacifica</h3>
                         </li>
                         <li>
                             <h3> Cem anos congelado</h3>
@@ -128,6 +129,30 @@
                             </ul>
                         </div>
                     </nav>
+                </article>
+            </section>
+        </conteiners>
+    </header>
+    <header>
+        <h2>Tio Iro</h2>
+        <conteiners>
+            <section>
+                <article>
+                    <img src="https://i.pinimg.com/564x/ba/7f/b8/ba7fb86ea14e0a8a9bd3c4096081beb9.jpg" 
+                    alt="tio Iroh com roupa de refugiado,tomando chá, em uma pose feliz com uma expressão alviada com um sorriso de labios contentes." />
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Consectetur eius asperiores repudiandae eum officia unde ratione, tenetur reprehenderit repellendus nemo ipsum minima quod iure temporibus, deserunt, illo distinctio eligendi magnam.</p>
+                <nav>
+                    <div>
+                        <ul>
+                            <li>
+                                <a href="./midia.html">media.testCSS</a>
+                            </li>
+                            <li>
+                                <a href="./lista.html">test.media2CSS</a>
+                            </li>
+                        </ul>
+                    </div>
+                </nav>
                 </article>
             </section>
         </conteiners>
