dificuldade com flexbox

--- a/HTML2/newcss.html
+++ b/HTML2/newcss.html
@@ -8,154 +8,85 @@
     <link rel="stylesheet" href="./SEGtes.css" />
 </head>
 <body>
-    <header>
-        <h1>Teste</h1>
-        <nav>
-            <div>
-                <ul>
-                    <li>
-                        <a href="./forms.html"> forms </a>
-                    </li>
-                    <li>
-                        <a href="./lista.html"> lista </a>
-                    </li>
-                </ul>
-            </div>
-        </nav>
-    </header>
-    <header>
-        <section>
-            <h2 id="Aang"> Aang ta PUTO!</h2>
-            <article>
-                <img src="https://i.pinimg.com/564x/79/14/ab/7914ab8a02118e1e0c7e1345d9030f08--avatar-aang-change-.jpg" 
-                alt="avatar aang puto"/> <br />
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Aliquid molestiae dolore accusamus nesciunt earum modi at laborum minima tempore deserunt. Reiciendis sapiente nam recusandae corporis maxime tempore praesentium error perspiciatis.</p>
-                <div>
+    <header class="conteiners">
+        <div>
+            <nav>
+            <h1>Teste</h1>
                     <ul>
                         <li>
-                            <h3 id="ar" >Nomade do AR, cultura pacifica</h3>
+                            <a href="./forms.html"> forms </a>
                         </li>
                         <li>
-                            <h3> Cem anos congelado</h3>
+                            <a href="./lista.html"> lista </a>
                         </li>
                     </ul>
+            </nav>
+        </div>
+    </header>
+        <section>
+            <div class="conteiners"> 
+                <h2 id="Aang"> Aang ta PUTO!</h2>
+                <div class="articles">
+                    <article>
+                        <img src="https://i.pinimg.com/564x/79/14/ab/7914ab8a02118e1e0c7e1345d9030f08--avatar-aang-change-.jpg"  alt="avatar aang puto"/>
+                        <header>
+                            <time class="creation-date">22/05/2050 ás 22:22</time>
+                        </header>
+                        <h3>Nomade do AR, cultura pacifica</h3>
+                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Aliquid molestiae dolore accusamus nesciunt earum modi at laborum minima tempore deserunt. Reiciendis sapiente nam recusandae corporis maxime tempore praesentium error perspiciatis.</p>
+                    </article>
                 </div>
-            </article>
+            </div>
         </section>
-    </header>
-    <header>
         <section>
-            <H2>SOKKA estratégia</H2>
-            <article>
-                <img src="https://comicvine.gamespot.com/a/uploads/square_medium/11138/111385676/7212569-5375701875-eb39f.jpg"
-                alt="sokka com espada em posição de batalha" /> <br />
-                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Explicabo quis commodi officia molestias natus delectus fugit. Suscipit ut perspiciatis excepturi voluptatum repudiandae! Corrupti voluptatem ducimus dolor nisi saepe ullam nesciunt!</p>
-                <nav>
-                    <div>
-                        <ul>
-                            <li>
-                                <h3> armas de sokka, boomerang e espada</h3>
-                            </li>
-                            <li>
-                                <h3>Tecnicas de sokka, tribo da águra e Mestre Lotus Branco</h3>
-                            </li>
-                        </ul>
-                    </div>
-                </nav>
-            </article>
-        </Section>
-    </header>
-    <header>
-        <h2>KATARA SANGUE OP!</h2>
-        <section>
-            <article>
-                <img src="https://i.pinimg.com/564x/67/45/5e/67455e333d8f236d2d2c9ef6c904a9f0.jpg" 
-                alt="Katara vestida a carater nação do fogo, com expreção de brava." /> <br />
-                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Dolor in commodi labore officia nulla, ducimus repellendus, culpa facilis suscipit similique quod facere cupiditate. Ad, sequi doloremque. Optio corrupti ab placeat.</p>
-                <nav>
-                    <div>
-                        <ul>
-                            <li>
-                                <h3>Mestra em dobra de água, professora de aang e da tribo da agua do norte.</h3>
-                            </li>
-                            <li>
-                                <h3>Esposa de Aang, arco de desenvolvimento complexo no livro do fogo.</h3>
-                            </li>
-                        </ul>
-                    </div>
-                </nav>
-            </article>
+            <div class="conteiners">
+                <H2>SOKKA estratégia</H2>
+                <div class="articles">
+                    <article>
+                        <img src="https://comicvine.gamespot.com/a/uploads/square_medium/11138/111385676/7212569-5375701875-eb39f.jpg" alt="sokka com espada em posição de batalha" /> 
+                        <header> 
+                            <time class="creation-date"> 19/08/2069 ás 12:12</time>
+                        </header>
+                        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Explicabo quis commodi officia molestias natus delectus fugit. Suscipit ut perspiciatis excepturi voluptatum repudiandae! Corrupti voluptatem ducimus dolor nisi saepe ullam nesciunt!</p>
+                    </article>
+                </div>
+            </div>
         </section>
-    </header>
-    <header>
-        <h2>Toph Ferro</h2>
         <section>
-            <article>
-                <img src="https://i.pinimg.com/564x/79/c1/f8/79c1f8960e796a622649f2d34c82fd82.jpg" 
-                alt="toph em posição de luta, dia do eclipse" /> <br >
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Placeat animi id autem ut deserunt? Laborum itaque nulla, excepturi alias molestiae nostrum harum labore qui aut dolorem, quaerat fugit molestias perferendis?</p>
-                <nav>
-                    <div>
-                        <ul>
-                            <li>
-                                <h3>Toph braba, mestre de dominação da terra, professora de Aang.</h3>
-                            </li>
-                            <li>
-                                <h3>MT FODA</h3>
-                            </li>
-                        </ul>
-                    </div>
-                </nav>
-            </article>
+            <div class="conteiners">
+                <h2>KATARA SANGUE OP!</h2>
+                <div class="articles">
+                    <article>
+                        <img src="https://i.pinimg.com/564x/67/45/5e/67455e333d8f236d2d2c9ef6c904a9f0.jpg" alt="Katara vestida a carater nação do fogo, com expreção de brava." /> <br />
+                        <header>
+                            <time class="creation-date">31/02/2044 ás 15:15 </time>
+                        </header>
+                        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Dolor in commodi labore officia nulla, ducimus repellendus, culpa facilis suscipit similique quod facere cupiditate. Ad, sequi doloremque. Optio corrupti ab placeat.</p>
+                                <ul>
+                                    <li>
+                                        <h3>Mestra em dobra de água, professora de aang e da tribo da agua do norte.</h3>
+                                    </li>
+                                    <li>
+                                        <h3>Esposa de Aang, arco de desenvolvimento complexo no livro do fogo.</h3>
+                                    </li>
+                                </ul>
+                    </article>
+                </div>
+            </div>
         </section>
-    </header>
-    <header>
-        <h2>ZUKO sorrindo raramente</h2>
-        <conteiners>
-            <section>
-                <article>
-                    <img src="https://i.pinimg.com/564x/f5/11/ed/f511ed47ca7193eb64a329b884671542.jpg"
-                    alt="zuko sorrindo"/> <br />
-                    <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Est molestiae molestias aliquid? Saepe eveniet laudantium repudiandae perferendis maiores odit provident accusamus rerum ad obcaecati nemo, exercitationem laborum aliquam harum consectetur.</p>
-                    <nav>
-                        <div>
-                            <ul>
-                                <li>
-                                    <a href="./tabelas.html"> tabelas testeCSS</a>
-                                </li>
-                                <li>
-                                    <a href="./conteiners.html"> conteiners testCSS</a>
-                                </li>
-                            </ul>
-                        </div>
-                    </nav>
-                </article>
-            </section>
-        </conteiners>
-    </header>
-    <header>
-        <h2>Tio Iro</h2>
-        <conteiners>
-            <section>
-                <article>
-                    <img src="https://i.pinimg.com/564x/ba/7f/b8/ba7fb86ea14e0a8a9bd3c4096081beb9.jpg" 
-                    alt="tio Iroh com roupa de refugiado,tomando chá, em uma pose feliz com uma expressão alviada com um sorriso de labios contentes." />
-                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Consectetur eius asperiores repudiandae eum officia unde ratione, tenetur reprehenderit repellendus nemo ipsum minima quod iure temporibus, deserunt, illo distinctio eligendi magnam.</p>
-                <nav>
-                    <div>
-                        <ul>
-                            <li>
-                                <a href="./midia.html">media.testCSS</a>
-                            </li>
-                            <li>
-                                <a href="./lista.html">test.media2CSS</a>
-                            </li>
-                        </ul>
-                    </div>
-                </nav>
-                </article>
-            </section>
-        </conteiners>
-    </header>
+        <section>
+            <div class="conteiners">
+                <h2>Toph Ferro</h2>
+                <div class="articles">
+                    <article>
+                        <img src="https://i.pinimg.com/564x/79/c1/f8/79c1f8960e796a622649f2d34c82fd82.jpg"  alt="toph em posição de luta, dia do eclipse" /> <br >
+                        <header>
+                            <time class="creation-date"> 11/11/2031 ás 14:47</time>
+                        </header>
+                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Placeat animi id autem ut deserunt? Laborum itaque nulla, excepturi alias molestiae nostrum harum labore qui aut dolorem, quaerat fugit molestias perferendis?</p>
+                    </article>
+                </div>
+            </div>
+        </section>
 </body>
 </html>
