correção efeituada, professor de plantão

--- a/HTML2/tatoo.html
+++ b/HTML2/tatoo.html
@@ -33,7 +33,7 @@
     </header>
     <section>
         <div class="conteiner">
-            <img src="./Mídia/estudioTatoo.jpg" alt="estudio de tatoo, com diversos quadros de arte na parede e um tatoador tatuando. "/>
+            <img id="studio" src="./Mídia/estudioTatoo.jpg" alt="estudio de tatoo, com diversos quadros de arte na parede e um tatoador tatuando. "/>
             <div>
                 <h2 id="sobrenos">Sobre nós</h2>
                 <p>
@@ -69,7 +69,7 @@
         </div>
     </section>
     <section>
-        <div class="containers">
+        <div>
             <div id="tema">
                 <h2 id="titulotema">Temas</h2>
                 <ul class="modelos">
@@ -124,8 +124,8 @@
             </div>
         </div>
     </section>
-    <section id="contato">
-        <div class="conteiner">
+    <section class="contato">
+        <div class="reparo">
             <h2 id="cont">Contato</h2>
             <div class="metodo-contato" id="reto">
                 <div>
@@ -170,7 +170,7 @@
                         </ul>
                     </nav>
                 </div>
-                <div>
+                <div id="filial">
                     <h3>Filiais</h3>
                     <p>
                         A.v Jesus queiroz N°123, Vila Holarenga - Hamburgo
