--- a/HTML2/tatoo.html
+++ b/HTML2/tatoo.html
@@ -129,7 +129,7 @@
             <h2 id="cont">Contato</h2>
             <div class="metodo-contato" id="reto">
                 <div>
-                    <h3>Fale conosco</h3>
+                    <h3 id="fale">Fale conosco</h3>
                     <form>
                     <input type="text" placeholder="Seu nome" required />
                     <input type="email" placeholder="Seu email" />
@@ -171,7 +171,7 @@
                     </nav>
                 </div>
                 <div id="filial">
-                    <h3>Filiais</h3>
+                    <h3 id="fil">Filiais</h3>
                     <p>
                         A.v Jesus queiroz N°123, Vila Holarenga - Hamburgo
                     </p><br />
